# Venom

./: .gitignore  README.md  build.bat  keylogger.nim  main.nim
Browser stealer/: Readme.md  browser_data_extractor.py  read_cookies.nim
Webcam/: webcam.nim
api/: api.nim
crypto_wallets/: wallet_stealer.nim
deployment/: Readme.md  docker-compose.yml  nginx.conf
deployment/html/: promozone.html
dll_hijacking/: dll_hijacking.cpp  test.cpp  version.cpp  version.def
interet_web_site/: Dockerfile  docker-compose.yml
interet_web_site/app/: __init__.py  config.py  models.py  routes.py  services.py
interet_web_site/templates/: device.html  index.html  login.html
llvm/StringObfuscator/: main
obfuscation/: cypher.nim
src/api/: api.nim
src/obfuscation/: antidebug_sandbox.nim  unhooking.nim
src/obfuscation/llvm/StringObfuscator/: CMakeLists.txt  main.cpp
src/obfuscation/llvm/StringObfuscator/src/: ObfuscatorPass.h  Plugin.cpp
ssh_stealer/: ssh_stealer  ssh_stealer.nim
ssh_stealer/sortie_c/: @m..@s..@s..@s..@s..@s..@s..@susr@slib@snim@slib@sposix@sposix.nim.c  @m..@s..@s..@s..@s..@s..@s..@susr@slib@snim@slib@spure@smath.nim.c  @m..@s..@s..@s..@s..@s..@s..@susr@slib@snim@slib@spure@sos.nim.c  @m..@s..@s..@s..@s..@s..@s..@susr@slib@snim@slib@spure@spathnorm.nim.c  @m..@s..@s..@s..@s..@s..@s..@susr@slib@snim@slib@spure@sstrutils.nim.c  @m..@s..@s..@s..@s..@s..@s..@susr@slib@snim@slib@spure@stimes.nim.c  (+17 more)
system info/: system_info.nim
system_info/: system_info.nim
vpn stealer/: vpn_stealer.nim
vpn_stealer/: readme.txt  vpn_stealer.nim
(+15 files in other folders)
